--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,6 +2,6 @@ p {
   color: red;
   border: 5px red;
   font-family: courier;
-  padding: 5px;
-  margin: 5px
+  padding: 10px;
+  margin: 10px;
 }
