--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -10,10 +10,15 @@ p.styleRed {
 }
 
 .button {
-    color: red
+    color: white;
+    background-color: red;
     font-size: 20px;
     border: 5px solid red;
     border-radius: 10px;
     padding: 20px;
     margin: 20px;
+}
+.button:hover {
+  background-color: black;
+  
 }
